<resources>
    <string name="app_name">Lights Out</string>
    <string name="game_title">Lights Out</string>
    <string name="name">NAME:</string>
    <string name="empty"/>
    <string name="done_string">SET NAME</string>
    <string name="retry">RETRY</string>
    <string name="clicks">NUMBER OF CLICKS:</string>
    <string name="initial_count">0</string>
    <string name="winTextScreen">YOU WIN!!!\n\nYou won the game! Good job! Here is some good music</string>
    <string name="clicks2">Clicks</string>
    <string name="name_button">NAME</string>
    <string name="introduction">You have won the game with only</string>
    <string name="finish_title">Congratulations!</string>
    <string name="play_string">PLAY</string>

</resources>
