<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameFinish">

        <TextView
            android:id="@+id/congrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/p5"
            android:text="@string/finish_title"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/p5"
            android:text="@string/introduction"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congrats"
            app:layout_constraintVertical_bias="0.19" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/p5"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/retry_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/win"
            app:layout_constraintVertical_bias="0.38" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/retry"
            android:textColor="#59BEFC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/win"
            app:layout_constraintVertical_bias="0.18" />

        <Button
            android:id="@+id/reset_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/name_button"
            android:textColor="#59BEFC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retry_button"
            app:layout_constraintVertical_bias="0.100000024" />

        <TextView
            android:id="@+id/nameView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="48dp"
            android:fontFamily="@font/p5"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/win"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congrats" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
